# leverage-weighted-conformal-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: generate_plot.py
experiments/: baselines.py  dgps.py  metrics.py  plotting.py  regen_fig4_fig5.py  regenerate_fig7_fig8.py  regenerate_figures.py  run_all.py  run_approximate.py  run_baselines.py  run_conditional.py  run_coverage.py  run_efficiency_frontier.py  run_feature_scaling.py  run_gaussian_recovery.py  run_hetero_sweep.py  run_nonlinear.py  run_real_data.py  run_ridge.py  run_scaling.py  run_weight_selection.py  run_width.py
experiments/results/: exp1_coverage.json  exp3_width.json  exp4_efficiency.json  exp5_gaussian.json  exp6_hetero.json  exp7_baselines.json  exp8_approximate.json  exp9_scaling.json  exp_feature_scaling.json  exp_nonlinear.json  exp_real_data.json  exp_ridge.json  exp_ridge_extended.json  exp_weight_selection.json
lwcp/: __init__.py  _utils.py  conformal.py  diagnostics.py  leverage.py  weights.py
tests/: test_conformal.py  test_integration.py  test_leverage.py  test_weights.py
